--- a/WemaAssessment/CustomerServiceApi/appsettings.json
+++ b/WemaAssessment/CustomerServiceApi/appsettings.json
@@ -8,7 +8,7 @@
 
   
     "ConnectionStrings": {
-      "DefaultConnection": "Server=EXCEL\\SQLEXPRESS;Database=wemadb;User Id=vatebra;Password=SQL@7;TrustServerCertificate=True;"
+      "DefaultConnection": "Server=server;Database=db;User Id=id;Password=pwd;TrustServerCertificate=True;"
     },
 
 
