--- a/WemaAssessment/CustomerServiceApi/appsettings.json
+++ b/WemaAssessment/CustomerServiceApi/appsettings.json
@@ -6,11 +6,15 @@
     }
   },
 
-  
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=server;Database=db;User Id=id;Password=pwd;TrustServerCertificate=True;"
-    },
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=server;Database=db;User Id=id;Password=pwd;TrustServerCertificate=True;"
+  },
+
+  "banks": {
+    "BaseUrl": "https://wema-alatdev-apimgt.azure-api.net/",
+    "GetAllBanks": "alat-test/api/Shared/GetAllBanks"
+  },
 
   "AllowedHosts": "*"
 }
