--- a/WemaAssessment/CustomerServiceApi/appsettings.json
+++ b/WemaAssessment/CustomerServiceApi/appsettings.json
@@ -11,7 +11,7 @@
     "DefaultConnection": "Server=server;Database=db;User Id=id;Password=pwd;TrustServerCertificate=True;"
   },
 
-  "banks": {
+  "BankSettings": {
     "BaseUrl": "https://wema-alatdev-apimgt.azure-api.net/",
     "GetAllBanks": "alat-test/api/Shared/GetAllBanks"
   },
