--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,29 @@
 /WemaAssessment/.vs/WemaAssessment/CopilotIndices/0.2.1657.32929/CodeChunks.db-wal
 /WemaAssessment/.vs/WemaAssessment/FileContentIndex
 /WemaAssessment/.vs/WemaAssessment/v17/.suo
+/WemaAssessment/.vs/WemaAssessment/v17/DocumentLayout.backup.json
+/WemaAssessment/.vs/WemaAssessment/v17/DocumentLayout.json
+/WemaAssessment/CustomerServiceApi/bin/Debug/net8.0/CustomerServiceApi.dll
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/ref/CustomerServiceApi.dll
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/CustomerServiceApi.AssemblyInfo.cs
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/refint/CustomerServiceApi.dll
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/CustomerServiceApi.AssemblyInfoInputs.cache
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/CustomerServiceApi.sourcelink.json
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/CustomerServiceApi.dll
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/CustomerServiceApi.pdb
+/WemaAssessment/TestProject/bin/Debug/net8.0/TestProject.pdb
+/WemaAssessment/TestProject/bin/Debug/net8.0/CustomerServiceApi.pdb
+/WemaAssessment/TestProject/bin/Debug/net8.0/TestProject.dll
+/WemaAssessment/TestProject/bin/Debug/net8.0/CustomerServiceApi.exe
+/WemaAssessment/TestProject/bin/Debug/net8.0/CustomerServiceApi.dll
+/WemaAssessment/CustomerServiceApi/obj/Debug/net8.0/apphost.exe
+/WemaAssessment/CustomerServiceApi/bin/Debug/net8.0/CustomerServiceApi.exe
+/WemaAssessment/CustomerServiceApi/bin/Debug/net8.0/CustomerServiceApi.pdb
+/WemaAssessment/TestProject/obj/Debug/net8.0/refint/TestProject.dll
+/WemaAssessment/TestProject/obj/Debug/net8.0/ref/TestProject.dll
+/WemaAssessment/TestProject/obj/Debug/net8.0/TestProject.AssemblyInfo.cs
+/WemaAssessment/TestProject/obj/Debug/net8.0/TestProject.AssemblyInfoInputs.cache
+/WemaAssessment/TestProject/obj/Debug/net8.0/TestProject.pdb
+/WemaAssessment/TestProject/obj/Debug/net8.0/TestProject.csproj.AssemblyReference.cache
+/WemaAssessment/TestProject/obj/Debug/net8.0/TestProject.dll
+/WemaAssessment/TestProject/obj/Debug/net8.0/TestProject.sourcelink.json
